refactor: :recycle: Added google service file to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+android/google-services.json
+ios/Runner/GoogleService-Info.plist
